fixes whitespace rendering in events

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -125,6 +125,7 @@ select
 
 .eventblock p {
 	font-size: 15px;
+    white-space: pre-wrap;
 }
 
 
